--- a/margin.css
+++ b/margin.css
@@ -1,9 +1,9 @@
 /* Margin */
 
-@value space1 from 'scrubs-theme/layout.css';
-@value space2 from 'scrubs-theme/layout.css';
-@value space3 from 'scrubs-theme/layout.css';
-@value barHeight from 'scrubs-theme/layout.css';
+@value space1 from 'theme/layout.css';
+@value space2 from 'theme/layout.css';
+@value space3 from 'theme/layout.css';
+@value barHeight from 'theme/layout.css';
 
 .m0,
 .m0OnHover:hover,
