Text Grey Dark on Sibling Input Focus

--- a/colours.css
+++ b/colours.css
@@ -28,7 +28,8 @@
 
 .textGreyDark,
 .textGreyDarkOnHover:hover,
-.textGreyDarkOnFocus:focus {
+.textGreyDarkOnFocus:focus,
+input:focus + .textGreyDarkOnSiblingInputFocus {
   color: greyDark;
 }
 
