--- a/typography.css
+++ b/typography.css
@@ -15,6 +15,7 @@
 @value boldFontSrc from 'theme/type.css';
 @value boldFontItalicSrc from 'theme/type.css';
 @value boldFontWeight from 'theme/type.css';
+@value letterSpacing from 'theme/type.css';
 
 
 @font-face {
@@ -211,4 +212,10 @@
 .listResetOnFocus:focus {
   list-style: none;
   padding-left: 0;
+}
+
+.letterSpacing,
+.letterSpacingOnHover:hover,
+.letterSpacingOnFocus:focus {
+  letter-spacing: letterSpacing;
 }
